[package]
name = "mfp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
gloo = "0.10.0"
indexmap = "2.1.0"
js-sys = "0.3.65"
serde = { version="1.0.190", features=["derive"] }
yew = {version="0.21.0", features=["csr"]}

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer", "FileSystemDirectoryEntry"]
